--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ body {
   padding: 0;
   width: 100vw;
   height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   font-family: 'Satoshi', sans-serif;
   background: linear-gradient(
@@ -65,6 +66,7 @@ body {
   align-items: center;
   justify-content: space-evenly;
   height: 100vh;
+  height: 100dvh;
   width: 100%;
   padding: 2rem;
   box-sizing: border-box;
