--- a/src/index.css
+++ b/src/index.css
@@ -26,27 +26,33 @@
   --gradient-orange: #fe9544;
 }
 
+html {
+  height: 100%;
+  background-color: rgb(224, 150, 255);
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
-  height: 100dvh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   font-family: 'Satoshi', sans-serif;
-  background: linear-gradient(
-    -45deg,
-    var(--gradient-purple),
-    var(--gradient-pink),
-    var(--gradient-red),
-    var(--gradient-orange)
-  );
-  background-size: 400% 400%;
-  animation: gradientRoll 15s ease infinite;
+  color: white;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
 }
 
 .container {
@@ -65,8 +71,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 100vh;
-  height: 100dvh;
+  height: 100%;
   width: 100%;
   padding: 2rem;
   box-sizing: border-box;
